# rocmrc

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
bindings_generator/: Cargo.toml  Dockerfile  bindings-fmt.toml  regen-bindings.sh
bindings_generator/src/: main.rs  merge.rs  module.rs  version.rs
examples/: matmul_lt.rs  sgemm.rs  vec_add.rs
src/: lib.rs
src/driver/: mod.rs  result.rs  sys.rs
src/driver/sys/: mod.rs  wrapper.h
src/hip/: result.rs
src/hip/safe/: core.rs  external_memory.rs  graph.rs  launch.rs  mod.rs  profile.rs  unified_memory.rs
src/hip/sys/: wrapper.h
src/hipblaslt/: mod.rs  result.rs  safe.rs
src/hipblaslt/sys/: mod.rs  wrapper.h
src/hiprtc/: mod.rs  result.rs  safe.rs  sys.rs
src/hiprtc/sys/: mod.rs
src/rocblas/: mod.rs  result.rs
src/rocblas/safe/: asum.rs  axpy.rs  copy.rs  dot.rs  gemm.rs  gemv.rs  mod.rs  nrm2.rs  scal.rs
src/rocblas/sys/: mod.rs  wrapper.h
