[workspace]
members = ["bindings_generator"]

[package]
name = "rocmrc"
version = "0.1.0"
edition = "2024"
description = "Minimal safe ROCm bindings (HIP, hipRTC), modeled after cudarc"
license = "MIT OR Apache-2.0"

[features]
default = []
rocblas = []
hipblaslt = []
"rocm-06030" = []

[dependencies]
thiserror = "1.0"
half = "2"

[dev-dependencies]
bytemuck = "1.16"

[[example]]
name = "vec_add"

[[example]]
name = "sgemm"
required-features = ["rocblas"]

[[example]]
name = "matmul_lt"
required-features = ["hipblaslt"]
