[workspace]
members = ["bindings_generator"]

[package]
name = "rocmrc"
version = "0.4.0"
edition = "2024"
description = "Minimal safe ROCm bindings (HIP, hipRTC), modeled after cudarc"
license = "MIT OR Apache-2.0"
authors = ["Reis McMillan <reis@mcmlln.dev>"]
repository = "https://github.com/Reis-McMillan/rocmrc"
homepage = "https://github.com/Reis-McMillan/rocmrc"
documentation = "https://docs.rs/rocmrc"
readme = "README.md"
keywords = ["rocm", "hip", "gpu", "rocblas", "hipblaslt"]
categories = ["external-ffi-bindings", "hardware-support", "science"]

[features]
default = []
rocblas = []
hipblaslt = []

# Optional `DeviceRepr` / `ValidAsZeroBits` impls for sub-32-bit float types.
# `half` (f16/bf16) is an unconditional dep because `rocblas` uses it for
# half-precision GEMM trait impls, so no `f16` feature gate is needed.
f8 = ["dep:float8"]
f4 = ["dep:float4"]
# Gate `Matmul<half::f16>` / `Matmul<half::bf16>` impls in hipblaslt
# (mirrors cudarc's nvrtc-side `f16` gate). The `half` dep itself is
# unconditional because rocblas needs it.
f16 = []

# ROCm version axis. Consumers pick exactly one to select which committed
# binding (under src/<mod>/sys/linked/sys_<ver>.rs) the merged sys.rs includes.
# Versions added on demand as `bindings_generator` is run on a matching install.
"rocm-06002" = []
"rocm-06015" = []
"rocm-06024" = []
"rocm-06033" = []
"rocm-06043" = []
"rocm-07002" = []
"rocm-07011" = []
"rocm-07020" = []
"rocm-07021" = []
"rocm-07022" = []
"rocm-07023" = []

dynamic-loading = ["dep:libloading"]

[dependencies]
thiserror = "1.0"
half = "2"
float8 = { version = "0.2", optional = true }
float4 = { version = "0.1", optional = true }
libloading = { version = "0.8", optional = true }

[dev-dependencies]
bytemuck = "1.16"

[[example]]
name = "vec_add"

[[example]]
name = "sgemm"
required-features = ["rocblas"]

[[example]]
name = "matmul_lt"
required-features = ["hipblaslt"]
