[package]
name = "bindings_generator"
version = "0.1.0"
edition = "2024"
# Workspace dev tool; not a published crate. Keeps `cargo publish --workspace`
# from accidentally pushing it to crates.io.
publish = false

[dependencies]
anyhow = "1"
bindgen = "0.72"
clap = { version = "4", features = ["derive", "env"] }
rayon = "1"
indicatif = "0.18"
log = "0.4"
env_logger = "0.11"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"
